@@ -2,7 +2,7 @@ from init_env import init_environment
 
 env = init_environment("qt5 mlibrary clhep geant4")
 env.Append(LIBPATH = ['lib'])
-env.Append(CPPPATH = [Dir('utilities'), Dir('gui'), Dir('run'), Dir('detector'), Dir('generator'), Dir('glog')])
+env.Append(CPPPATH = [Dir('utilities'), Dir('gui'), Dir('run'), Dir('detector'), Dir('generator'), Dir('glog'), Dir('sensitivity')])
 
 
 # utilities
