@@ -1,8 +1,8 @@
 // gemc
 #include "gDetectorConstruction.h"
+#include "gSensitiveDetector.h"
 
 // mlibrary
-#include "gsystem.h"
 #include "g4volume.h"
 
 GDetectorConstruction::GDetectorConstruction(GOptions* opt) : G4VUserDetectorConstruction(), gopt(opt)
@@ -17,8 +17,6 @@ GDetectorConstruction::~GDetectorConstruction() {}
 
 G4VPhysicalVolume* GDetectorConstruction::Construct()
 {
-
-
 	G4cout << " Constructing gemc world " << G4endl;
 
 	// PRAGMA: TODO
@@ -26,7 +24,7 @@ G4VPhysicalVolume* GDetectorConstruction::Construct()
 	// or it could be inside g4setup
 	// or it has to be in gemc main then assigned later?
 	// well seee
-	GSetup *gsetup = new GSetup(gopt);
+	gsetup = new GSetup(gopt);
 
 	G4cout << " Constructing geant4 world " << G4endl;
 
@@ -35,7 +33,7 @@ G4VPhysicalVolume* GDetectorConstruction::Construct()
 	// or it has to be in gemc main then assigned later?
 	// can this be deleted
 	// well seee
-	G4Setup *g4setup = new G4Setup(gsetup, gopt);
+	g4setup = new G4Setup(gsetup, gopt);
 
 
 
@@ -47,4 +45,25 @@ G4VPhysicalVolume* GDetectorConstruction::Construct()
 void GDetectorConstruction::ConstructSDandField()
 {
 	G4cout << " Inside SDandField" << G4endl;
+
+	map<string, GSensitiveDetector*> allSensitiveDetectors;
+	
+	// building the sensitive detectors
+	for(auto &s : gsetup->getSetup()) {
+		for(auto &gv : s.second->getSytems()) {
+			string sensitivity = gv.second->getSensitivity();
+			G4LogicalVolume *thisLV = g4setup->getLogical(gv.first);
+			if(thisLV == nullptr) {
+				cerr << " !!! Error: " << gv.first << " logical volume not build? This should never happen." << endl;
+				exit(99);
+			} else if(sensitivity != "no") {
+				if(allSensitiveDetectors.find(sensitivity) == allSensitiveDetectors.end()) {
+					allSensitiveDetectors[sensitivity] = new GSensitiveDetector(sensitivity, gopt);
+				}
+				SetSensitiveDetector(gv.first, allSensitiveDetectors[sensitivity]);
+			}
+		}
+		
+	}
+	
 }
