@@ -1,8 +1,10 @@
 #ifndef GDETECTORCONSTRUCTION_H
 #define GDETECTORCONSTRUCTION_H 1
 
-// options
+// mlibrary
+#include "gsystem.h"
 #include "goptions.h"
+#include "g4volume.h"
 
 // geant4
 #include "G4VUserDetectorConstruction.hh"
@@ -18,7 +20,12 @@ public:
 	// virtual method from G4VUserDetectorConstruction.
 	virtual G4VPhysicalVolume* Construct();
 	virtual void ConstructSDandField();
+
+private:
 	GOptions* gopt;
+	GSetup *gsetup;
+	G4Setup *g4setup;
+
 };
 
 
