@@ -14,11 +14,11 @@ GPrimaryGeneratorAction::GPrimaryGeneratorAction() : G4VUserPrimaryGeneratorActi
 	G4ParticleTable* particleTable = G4ParticleTable::GetParticleTable();
 	G4ParticleDefinition* particle = particleTable->FindParticle("proton");
 	fParticleGun->SetParticleDefinition(particle);
-	fParticleGun->SetParticleMomentumDirection(G4ThreeVector(0.0,0.0,1.));
-	fParticleGun->SetParticleEnergy(150.0*MeV);
+	fParticleGun->SetParticleMomentumDirection(G4ThreeVector(0.0, 1., 0.));
+	fParticleGun->SetParticleEnergy(1.0*GeV);
 	//
 	// default beam position
-	G4double position = -200./2.*cm;
+	G4double position = 0.*cm;
 	//
 	fParticleGun->SetParticlePosition(G4ThreeVector(0.*cm, 0.*cm, position));
 }
