@@ -7,6 +7,13 @@
 // mlibrary
 #include "goptions.h"
 
+// gemc
+#include "gTouchable.h"
+
+// c++
+#include <vector>
+using namespace std;
+
 class GSensitiveDetector : public G4VSensitiveDetector
 {
 public:
@@ -17,6 +24,17 @@ public:
 	virtual void EndOfEvent(G4HCofThisEvent* g4hc);                            ///< End of sensitive Hit
 
 private:
+	int verbosity;
+	set<GTouchable> touchableSet;
+
+	// by default the touchable is not changed
+	// this function is loaded by plugin methods
+	virtual vector<GTouchable*> processTouchable(GTouchable *gTouchID, G4Step* thisStep) {return { gTouchID } ;}
+
+
+public:
+	// GSensitiveDetector options - defined in utilities.cc
+	static map<string, GOption> defineOptions();
 
 };
 
